# Simple-SOP

./: .gitignore  CLAUDE.md  LICENSE  README.md  SOP_BUILDER_SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  implementation_spec.md
.github/workflows/: build-linux.yml  build-windows.yml  pages.yml  release.yml
docs/: SOP_BUILDER_SPEC.md  ai-enhancement-mock.html  index.html  sop-builder-ui-reference.html  sop-pdf-template.html
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
public/: pdf-template.html
scripts/: bump-version.js  install-hooks.cjs  pre-commit.cjs  release.cjs  seed_demo_db.py
src/: App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/editor/: CrossSopSearch.tsx  RevisionModal.tsx
src/components/editor/sections/: ApprovalSection.tsx  CycleTimeSection.tsx  DefinitionsSection.tsx  HeaderSection.tsx  ItemsSection.tsx  ProcedureSection.tsx  SafetySection.tsx  ScopeSection.tsx  StepCard.tsx  ToolsSection.tsx  (+1 more)
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/shared/: AIPreviewPanel.tsx  AnnotationWindow.tsx  CropWindow.tsx  DatePicker.tsx  DeleteSopModal.tsx  ImageFrame.tsx  ImageUploadArea.tsx  SparkleButton.tsx
src/components/ui/: dialog.tsx  suggestion-input.tsx  switch.tsx
src/pages/: Editor.tsx  Home.tsx  Settings.tsx  Viewer.css  Viewer.tsx
