[package]
name = "sop-builder"
version = "0.2.0"
description = "SOP Builder — Standard Operating Procedure management tool"
authors = ["SOP Builder Software"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sop_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid", "derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
anyhow = "1.0.102"
tokio = { version = "1.41", features = ["full"] }
base64 = "0.22.1"
zip = "8.6.0"
tempfile = "3.27.0"
walkdir = "2.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
keyring = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
